--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,20 +1,21 @@
 ---
-layout: archive
+# _layouts/home.html
+layout: default
 ---
 
-{{ content }}
-
-<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
-
-{% if paginator %}
-  {% assign posts = paginator.posts %}
-{% else %}
-  {% assign posts = site.posts %}
-{% endif %}
-
-{% assign entries_layout = page.entries_layout | default: 'list' %}
-<div class="entries-{{ entries_layout }}">
-  {% include documents-collection.html entries=posts type=entries_layout %}
+<div id="main" role="main">
+  {% include sidebar.html %}
+  <article class="page" itemscope itemtype="http://schema.org/CreativeWork">
+    <meta itemprop="headline" content="{{ page.title | escape }}">
+    <div class="page__inner-wrap">
+      {% if page.title %}
+        <header>
+          <h1 class="page__title" itemprop="headline">{{ page.title | escape }}</h1>
+        </header>
+      {% endif %}
+      <section class="page__content" itemprop="text">
+        {{ content }}
+      </section>
+    </div>
+  </article>
 </div>
-
-{% include paginator.html %}
